force-app/main/default/src/objects/PJN_Global_Setting__mdt/PJN_Global_Setting__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Account Search
Purpose: Definition of handler class used for the Account Search and the number max of results to be displayed. Global setting for all Programs; change only the max results field.
Metadata Relationship(s): --
Created by Mavens: Yes</description>
    <label>Global Setting</label>
    <pluralLabel>Global Settings</pluralLabel>
</CustomObject>