force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Account_Search_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account_Search_Account_Status__c</fullName>
    <defaultValue>&quot;A,C,U&quot;</defaultValue>
    <description>Account Search statuses allowed to search accounts. Separate statuses by comma(,).</description>
    <label>Account Search Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>