force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Account_Search_Contact_Info_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account_Search_Contact_Info_Status__c</fullName>
    <defaultValue>&quot;A&quot;</defaultValue>
    <description>Account Search statuses allowed to search contact information. Separate statuses by comma(,).</description>
    <label>Account Search Contact Info Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>