force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Account_Search_Handler_Classes__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account_Search_Handler_Classes__c</fullName>
    <defaultValue>&quot;PJN_AccountSearchHdlr&quot;</defaultValue>
    <description>Comma separated list of classes used in the Account Search. Results from each class are merged.</description>
    <inlineHelpText>Comma separated list of classes used in the Account Search. Results from each class are merged. The win order is the order they are listed (eg: A,B,C means A&gt;B&gt;C with A being the winner).</inlineHelpText>
    <label>Account Search Handler Classes</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>