force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Account_Search_Max_Results__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account_Search_Max_Results__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Max number of search results returned by account search.  Cannot exceed the SOSL limit of 200.</description>
    <label>Account Search Max Results</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>