force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Contact_Info_Address_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Info_Address_Record_Types__c</fullName>
    <description>Semi-colon delimited list of all contact info address record types.</description>
    <inlineHelpText>Semi-colon delimited list of all contact info address record types.</inlineHelpText>
    <label>Contact Info Address Record Types</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>