force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Create_DCR__c.field-meta.xml
<CustomField>
    <fullName>PJN_Create_DCR__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow Data Change Request creation</description>
    <inlineHelpText>Allow Data Change Request creation</inlineHelpText>
    <label>Create DCR</label>
    <type>Checkbox</type>
</CustomField>