force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Enable_Event_Automation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Enable_Event_Automation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The Event Automation Handler can be disabled by turning this setting off.</description>
    <label>Enable Event Automation</label>
    <type>Checkbox</type>
</CustomField>