force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Include_Open_Data_Network__c.field-meta.xml
<CustomField>
    <fullName>PJN_Include_Open_Data_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this checkbox to include the Open Data records searching, synchronising or downloading any record.</description>
    <inlineHelpText>Tick this checkbox to include the Open Data records searching, synchronising or downloading any record.</inlineHelpText>
    <label>Include Open Data Network?</label>
    <type>Checkbox</type>
</CustomField>