force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Network_API_Version__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_API_Version__c</fullName>
    <defaultValue>&quot;v19.0&quot;</defaultValue>
    <description>Veeva Network API version.</description>
    <label>Network API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>