force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Network_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_Named_Credential__c</fullName>
    <defaultValue>&quot;PJN_Veeva_Network&quot;</defaultValue>
    <description>Named credential used to connect with Veeva Network.</description>
    <inlineHelpText>Named credential used to connect with Veeva Network.</inlineHelpText>
    <label>Network Named Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>