force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Network_System__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_System__c</fullName>
    <defaultValue>&quot;PJN&quot;</defaultValue>
    <description>System used to identify in every connection with Veeva Network.</description>
    <inlineHelpText>System used to identify in every connection with Veeva Network.</inlineHelpText>
    <label>Network System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>