force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Transaction_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>PJN_Transaction_Log_Level__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Transaction log levels accepted - None, All, Errors</description>
    <inlineHelpText>Transaction log levels accepted - None, All, Errors</inlineHelpText>
    <label>Transaction Log Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>