force-app/main/default/src/objects/PJN_Global_Setting__mdt/fields/PJN_Veeva_Network__c.field-meta.xml
<CustomField>
    <fullName>PJN_Veeva_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows Veeva Network connection (Send/Retrieve DCRs, Sync, Search...)</description>
    <inlineHelpText>Allows Veeva Network connection</inlineHelpText>
    <label>Veeva Network</label>
    <type>Checkbox</type>
</CustomField>